--- a/packages/ExternalStorageProvider/res/values-bs-rBA/strings.xml
+++ b/packages/ExternalStorageProvider/res/values-bs-rBA/strings.xml
@@ -18,6 +18,5 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="7123375275748530234">"Aplikacija za vanjsku pohranu"</string>
     <string name="root_internal_storage" msgid="827844243068584127">"Interna pohrana"</string>
-    <!-- no translation found for root_home (7931555396767513359) -->
-    <skip />
+    <string name="root_home" msgid="7931555396767513359">"Početak"</string>
 </resources>
